--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
-		<title>Idleants Games - Play at idleants.github.io</title>
+		<title>Idle Ants Games - Play at idleants.github.io</title>
 			<link rel="icon" href="/assets/images/favicon.png" sizes="32x32">
-      <meta name="description" content="IdleAnts is a captivating incremental game where players manage an ant colony's growth and efficiency. Overcome challenges, upgrade ants, and expand your empire in this addictive simulation.">
+      <meta name="description" content="Idle Ants is a captivating incremental game where players manage an ant colony's growth and efficiency. Overcome challenges, upgrade ants, and expand your empire in this addictive simulation.">
      
-      <meta property="og:url" content="idleants.github.io" />
+      <meta property="og:url" content="idle ants.github.io" />
       <meta property="og:image:width" content="200 px" />
       <meta property="og:image:height" content="200 px" />
-      <meta property="og:title" content="idleants Games" />
-      <meta property="og:site_name" content="idleants Games" />
+      <meta property="og:title" content="idle ants Games" />
+      <meta property="og:site_name" content="idle ants Games" />
       <meta property="og:description" content="IdleAnts is a captivating incremental game where players manage an ant colony's growth and efficiency. Overcome challenges, upgrade ants, and expand your empire in this addictive simulation." />
       <meta property="og:type" content="website" />
       <meta property="og:image" content="/assets/images/icon_game.jpg">
@@ -91,7 +91,7 @@
 				<div id="mobile-back-button" draggable="true">
 					<i class="bi bi-x-circle-fill"></i>
 				</div>
-				<iframe id="game-area" style="width: 840px; height: 560px;"  src="https://topvazstore.github.io/g5/idleants/" crolling="none" frameborder="0" allowfullscreen></iframe>
+				<iframe id="game-area" style="width: 840px; height: 560px;"  src="https://topvazstore.github.io/g5/idle-ants" crolling="none" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</div>
 		<div class="game-info">
